@@ -1,3 +1,5 @@
+Mon Apr 27 18:07:21 MET DST 1998 hannes
+	* use ReAlloc for enlargeT, enlargeL  (kutil.cc)
 Mon Apr 27 16:45:41 MET DST 1998 hannes
         * fixed conversion of factory 0 to poly NULL (clapconv.cc)
 
